k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pkg-distributor
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/proxy-body-size: "1024m"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: repo.example.com
    http:
      paths:
      - backend:
          serviceName: pkg-distributor
          servicePort: 1973
